convert java 17 strong encapsulation notes to executable example