@@ -1,11 +1,11 @@
 /**
- * Explanatory material for Java 17 strong encapsulation of JDK internals.
+ * Executable child-JVM examples for Java 17 strong encapsulation of JDK
+ * internals.
  *
  * <p>
- * This package explains the migration problem and the module-system concepts
- * behind it. It intentionally does not perform illegal reflective access or
- * alter the JVM with access-opening flags. Read {@code README.md} for the
- * learner-oriented explanation before reading the notes class.
+ * This package demonstrates failed deep reflection, targeted
+ * {@code --add-opens} migration behavior, and the distinction between exported
+ * and opened packages without changing the Maven test JVM.
  * </p>
  */
 package net.jrodolfo.java_evolution.java17.strong_encapsulation;
